major update: version 2.0 (added hot loader)

--- a/package.json
+++ b/package.json
@@ -1,38 +1,50 @@
 {
 	"scripts": {
-		"build-watch": "webpack --progress --watch",
-		"build-dev": "webpack --progress",
-		"build": "webpack --progress && webpack -p",
+		"dev": "webpack-dev-server --hot --history-api-fallback --env.hot=true",
+		"watch": "webpack --progress --watch",
+		"build": "webpack",
+		"analyze": "webpack -p --env.analyze=true",
+		"lint": "\"./node_modules/.bin/eslint\" src",
+		"lint-fix": "\"./node_modules/.bin/eslint\" src --fix",
 		"test": "jest",
 		"test:watch": "npm test -- --watch"
 	},
 	"dependencies": {
-		"react": "^15.6.1",
-		"react-dom": "^15.6.1"
+		"prop-types": "^15.6.0",
+		"react": "^16.2.0",
+		"react-dom": "^16.2.0",
+		"react-redux": "^5.0.6",
+		"redux": "^3.7.2",
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-core": "^6.26.0",
 		"babel-loader": "^7.1.2",
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
-		"babel-preset-es2015": "^6.24.1",
+		"babel-polyfill": "^6.26.0",
+		"babel-preset-env": "^1.6.1",
 		"babel-preset-react": "^6.24.1",
-		"clean-webpack-plugin": "^0.1.16",
-		"copy-webpack-plugin": "^4.0.1",
+		"clean-webpack-plugin": "^0.1.17",
+		"copy-webpack-plugin": "^4.2.3",
 		"css-loader": "^0.28.7",
-		"enzyme": "^2.9.1",
-		"eslint": "^4.6.0",
-		"eslint-plugin-react": "^7.3.0",
-		"eslint-sammy-preset": "^1.0.0",
-		"extract-text-webpack-plugin": "^3.0.0",
-		"glob": "^7.1.2",
-		"html-minifier": "^3.5.3",
-		"jest": "^20.0.4",
-		"jsonminify": "^0.4.1",
-		"node-sass": "^4.5.3",
-		"react-test-renderer": "^15.6.1",
+		"enzyme": "^3.2.0",
+		"eslint": "^4.12.1",
+		"eslint-plugin-react": "^7.5.1",
+		"eslint-sammy-preset": "^1.1.4",
+		"extract-text-webpack-plugin": "^3.0.2",
+		"imagemin-webpack-plugin": "^1.5.2",
+		"jest": "^21.2.1",
+		"node-sass": "^4.7.2",
+		"open-browser-webpack-plugin": "^0.0.5",
+		"optimize-css-assets-webpack-plugin": "^3.2.0",
+		"react-hot-loader": "^3.1.3",
+		"react-test-renderer": "^16.2.0",
 		"sass-loader": "^6.0.6",
-		"uglifyjs-webpack-plugin": "^0.4.6",
-		"url-loader": "^0.5.9",
-		"webpack": "^3.5.5"
+		"style-loader": "^0.19.0",
+		"uglifyjs-webpack-plugin": "^1.1.2",
+		"url-loader": "^0.6.2",
+		"webpack": "^3.9.1",
+		"webpack-bundle-analyzer": "^2.9.1",
+		"webpack-dev-server": "^2.9.5"
 	}
 }
