--- a/.babelrc
+++ b/.babelrc
@@ -9,7 +9,17 @@
 		"react"
 	] ,
 	"plugins":[
-		"react-hot-loader/babel",
+		"react-hot-loader/babel" ,
 		"transform-object-rest-spread"
-	]
+	] ,
+	"env":{
+		"test":{
+			"presets":[
+				[
+					"env"
+				] ,
+				"react"
+			]
+		}
+	}
 }
