--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"analyze": "webpack --env.analyze=true",
 		"lint": "\"./node_modules/.bin/eslint\" src",
 		"lint-fix": "\"./node_modules/.bin/eslint\" src --fix",
-		"test": "jest"
+		"test": "jest --env=jsdom --setupTestFrameworkScriptFile=raf/polyfill"
 	},
 	"dependencies": {
 		"prop-types": "^15.6.0",
@@ -18,6 +18,7 @@
 	},
 	"devDependencies": {
 		"babel-core": "^6.26.0",
+		"babel-jest": "^21.2.0",
 		"babel-loader": "^7.1.2",
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-polyfill": "^6.26.0",
@@ -27,6 +28,7 @@
 		"copy-webpack-plugin": "^4.2.3",
 		"css-loader": "^0.28.7",
 		"enzyme": "^3.2.0",
+		"enzyme-adapter-react-16": "^1.1.0",
 		"eslint": "^4.12.1",
 		"eslint-plugin-react": "^7.5.1",
 		"eslint-sammy-preset": "^1.1.4",
