added axe-prop-types package

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"test:coverage": "jest --coverage"
 	},
 	"dependencies": {
+		"axe-prop-types": "^1.0.4",
 		"prop-types": "^15.6.0",
 		"react": "^16.2.0",
 		"react-dom": "^16.2.0",
