--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 	},
 	"devDependencies": {
 		"babel-core": "^6.26.0",
-		"babel-jest": "^21.2.0",
+		"babel-jest": "^22.4.1",
 		"babel-loader": "^7.1.2",
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-polyfill": "^6.26.0",
@@ -34,20 +34,21 @@
 		"enzyme-adapter-react-16": "^1.1.0",
 		"eslint": "^4.12.1",
 		"eslint-sammy-preset": "^2.0.2",
-		"extract-text-webpack-plugin": "^3.0.2",
-		"imagemin-webpack-plugin": "^1.5.2",
-		"jest": "^21.2.1",
+		"extract-text-webpack-plugin": "^4.0.0-alpha.0",
+		"imagemin-webpack-plugin": "^2.0.0",
+		"jest": "^22.4.2",
 		"node-sass": "^4.7.2",
 		"open-browser-webpack-plugin": "^0.0.5",
 		"optimize-css-assets-webpack-plugin": "^3.2.0",
-		"react-hot-loader": "^3.1.3",
+		"react-hot-loader": "^4.0.0",
 		"sass-loader": "^6.0.6",
-		"style-loader": "^0.19.0",
+		"style-loader": "^0.20.2",
 		"uglifyjs-webpack-plugin": "^1.1.2",
-		"url-loader": "^0.6.2",
-		"webpack": "^3.9.1",
+		"url-loader": "^1.0.1",
+		"webpack": "^4.0.1",
 		"webpack-bundle-analyzer": "^2.9.1",
-		"webpack-dev-server": "^2.9.5"
+		"webpack-cli": "^2.0.10",
+		"webpack-dev-server": "^3.1.0"
 	},
 	"jest": {
 		"moduleDirectories": [
