--- a/package.json
+++ b/package.json
@@ -5,51 +5,51 @@
 		"watch": "webpack --progress --watch",
 		"build": "webpack",
 		"analyze": "webpack --env.analyze=true",
-		"lint": "\"./node_modules/.bin/eslint\" src",
-		"lint:fix": "\"./node_modules/.bin/eslint\" src --fix",
+		"lint": "\"./node_modules/.bin/eslint\" .",
+		"lint:fix": "\"./node_modules/.bin/eslint\" . --fix",
 		"test": "jest",
 		"test:watch": "jest --watchAll",
 		"test:coverage": "jest --coverage"
 	},
 	"dependencies": {
-		"axe-prop-types": "^1.0.4",
-		"prop-types": "^15.6.0",
-		"react": "^16.2.0",
-		"react-dom": "^16.2.0",
-		"react-redux": "^5.0.6",
+		"axe-prop-types": "^1.0.5",
+		"prop-types": "^15.6.1",
+		"react": "^16.3.0",
+		"react-dom": "^16.3.0",
+		"react-redux": "^5.0.7",
 		"redux": "^3.7.2",
 		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-core": "^6.26.0",
-		"babel-jest": "^22.4.1",
-		"babel-loader": "^7.1.2",
+		"babel-jest": "^22.4.3",
+		"babel-loader": "^7.1.4",
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-polyfill": "^6.26.0",
 		"babel-preset-env": "^1.6.1",
 		"babel-preset-react": "^6.24.1",
-		"clean-webpack-plugin": "^0.1.17",
-		"copy-webpack-plugin": "^4.2.3",
-		"css-loader": "^0.28.7",
-		"enzyme": "^3.2.0",
-		"enzyme-adapter-react-16": "^1.1.0",
-		"eslint": "^4.12.1",
-		"eslint-sammy-preset": "^2.1.0",
+		"clean-webpack-plugin": "^0.1.19",
+		"copy-webpack-plugin": "^4.5.1",
+		"css-loader": "^0.28.11",
+		"enzyme": "^3.3.0",
+		"enzyme-adapter-react-16": "^1.1.1",
+		"eslint": "^4.19.1",
+		"eslint-sammy-preset": "^6.0.0",
 		"extract-text-webpack-plugin": "^4.0.0-alpha.0",
-		"imagemin-webpack-plugin": "^2.0.0",
-		"jest": "^22.4.2",
-		"node-sass": "^4.7.2",
+		"imagemin-webpack-plugin": "^2.1.1",
+		"jest": "^22.4.3",
+		"node-sass": "^4.8.3",
 		"open-browser-webpack-plugin": "^0.0.5",
-		"optimize-css-assets-webpack-plugin": "^3.2.0",
+		"optimize-css-assets-webpack-plugin": "^4.0.0",
 		"react-hot-loader": "^4.0.0",
-		"sass-loader": "^6.0.6",
-		"style-loader": "^0.20.2",
-		"uglifyjs-webpack-plugin": "^1.1.2",
+		"sass-loader": "^6.0.7",
+		"style-loader": "^0.20.3",
+		"uglifyjs-webpack-plugin": "^1.2.4",
 		"url-loader": "^1.0.1",
-		"webpack": "^4.0.1",
-		"webpack-bundle-analyzer": "^2.9.1",
-		"webpack-cli": "^2.0.10",
-		"webpack-dev-server": "^3.1.0"
+		"webpack": "^4.4.1",
+		"webpack-bundle-analyzer": "^2.11.1",
+		"webpack-cli": "^2.0.13",
+		"webpack-dev-server": "^3.1.1"
 	},
 	"jest": {
 		"moduleDirectories": [
