--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
 		"test:coverage": "jest --coverage"
 	},
 	"dependencies": {
-		"axe-prop-types": "^1.0.5",
+		"axe-prop-types": "^1.0.6",
 		"prop-types": "^15.6.1",
-		"react": "^16.3.0",
-		"react-dom": "^16.3.0",
+		"react": "^16.3.2",
+		"react-dom": "^16.3.2",
 		"react-redux": "^5.0.7",
-		"redux": "^3.7.2",
+		"redux": "^4.0.0",
 		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
-		"babel-core": "^6.26.0",
+		"babel-core": "^6.26.3",
 		"babel-jest": "^22.4.3",
 		"babel-loader": "^7.1.4",
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -34,22 +34,22 @@
 		"enzyme": "^3.3.0",
 		"enzyme-adapter-react-16": "^1.1.1",
 		"eslint": "^4.19.1",
-		"eslint-sammy-preset": "^6.0.0",
-		"extract-text-webpack-plugin": "^4.0.0-alpha.0",
+		"eslint-sammy-preset": "^6.2.0",
+		"extract-text-webpack-plugin": "^4.0.0-beta.0",
 		"imagemin-webpack-plugin": "^2.1.1",
 		"jest": "^22.4.3",
-		"node-sass": "^4.8.3",
+		"node-sass": "^4.9.0",
 		"open-browser-webpack-plugin": "^0.0.5",
-		"optimize-css-assets-webpack-plugin": "^4.0.0",
-		"react-hot-loader": "^4.0.0",
-		"sass-loader": "^6.0.7",
-		"style-loader": "^0.20.3",
-		"uglifyjs-webpack-plugin": "^1.2.4",
+		"optimize-css-assets-webpack-plugin": "^4.0.1",
+		"react-hot-loader": "^4.1.2",
+		"sass-loader": "^7.0.1",
+		"style-loader": "^0.21.0",
+		"uglifyjs-webpack-plugin": "^1.2.5",
 		"url-loader": "^1.0.1",
-		"webpack": "^4.4.1",
+		"webpack": "^4.7.0",
 		"webpack-bundle-analyzer": "^2.11.1",
-		"webpack-cli": "^2.0.13",
-		"webpack-dev-server": "^3.1.1"
+		"webpack-cli": "^2.1.3",
+		"webpack-dev-server": "^3.1.4"
 	},
 	"jest": {
 		"moduleDirectories": [
